# SShowNN

./: CMakeLists.txt  README.md  SDL_Shownn.kdev4  index.html  leftclick.xcf  main.c  params.json  rightclick.xcf
